# multiagentes-tpf

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: 00-core.mdc  10-session-protocol.mdc
a2a_compliance/: __init__.py  __main__.py  agent_card.py  app.py  reviewer.py  rules.py
docs/: ADR-0003-doble-persistencia.md  ADR-0004-rag-hibrido-chroma.md  ADR-0005-topologia-mcp.md  ADR-0006-guardrails-tres-capas.md  ADR-0009-modelos-por-rol.md  INFORME-esqueleto.md  PLAN-implementacion.md  SPEC-portfoliosentinel.md  informe-preliminar.md  model-card-predict-trend.md  portfoliosentinel-handoff-informe-final.md
docs/adrs/: ADR-0001-framework-langgraph.md  ADR-0002-frontera-agente-determinista.md  ADR-0007-estrategia-evaluacion.md  ADR-0008-a2a-compliance-consultivo.md  ADR-0010-parser-multi-layout.md  ADR-0011-injection-ticker-xlsx.md
docs/ejemplos/: README.md  comitente-01-conservador-hard-dollar.xlsx  comitente-02-agresivo-energia.xlsx  comitente-03-diversificado-cedears.xlsx  comitente-04-cartera-inicial.xlsx
docs/entregas/: PortfolioSentinel-Informe-Final.docx  informe-preliminar.md
evals/: RESULTS-run1.md  RESULTS-run2.md  RESULTS.md  __init__.py  asserts_det.py  config.yaml  conftest.py  harness.py
evals/golden/: test_gc1.py  test_gc2.py
evals/judge/: __init__.py  models.gemini.yaml  models.yaml  prompt_v1.md
evals/scenarios/: test_e1_degraded.py  test_e2_gap_interrupt.py  test_e3_injection.py  test_e4_malformed.py
fixtures/: estadocuenta-broker-layout.xlsx  estadocuenta-sintetico.xlsx
fixtures/market/: fx_rates.json  quotes.json
fixtures/web/: search_default.json  search_injection_e3.json
knowledge/: 01-macd-metodologia.md  02-rsi-metodologia.md  03-medias-moviles.md  04-cedears-argentina.md  05-bonos-soberanos.md  06-mep-ccl-fx.md  07-clustering-drivers-riesgo.md  08-concentracion-cartera.md  09-gestion-riesgo-stops.md  10-sizing-y-liquidez.md  11-panel-local-vs-subyacente.md
mcp_servers/: __init__.py
mcp_servers/market_data/: __init__.py  __main__.py  client.py  server.py
mcp_servers/portfolio_store/: __init__.py  __main__.py  (+2 more)
scripts/: build_broker_layout_fixture.py  build_image_fixtures.py  build_synthetic_fixture.py  demo_f8.py  gate_f3_run.py  gen_ejemplos.py  run_evals.py  train_trend_model.py
tests/: test_models_config.py  test_report_io.py  test_statement_market.py
(+65 files in other folders)
