[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfoliosentinel"
version = "0.1.0"
description = "Revisión on-demand de cartera minorista argentina (multiagente)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-ollama>=0.2",
  "langgraph>=0.2",
  "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
portfoliosentinel = "portfoliosentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portfoliosentinel = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
